# AI-Code-Review-Squad

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  setup.sh
.github/workflows/: analytics-ci.yml  backend-ci.yml  ci-cd.yml  frontend-ci.yml  release.yml  security.yml
alerts/: alert_rules.yml
analytics/gx/: validate.py
analytics/notebooks/: OrgRiskTrends.py
backend/: Dockerfile  Makefile  alembic.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/agents/: architecture_agent.py  base.py  logic_agent.py  orchestra.py  performance_agent.py  security.py  security_agent.py  style_agent.py
backend/app/api/: deps.py  reviews.py
backend/app/api/routes/: exports.py  findings.py  health.py  reviews.py  webhook_github.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: agents.py  repositories.py  reviews.py  users.py  webhooks.py
backend/app/core/: auth.py  celery.py  config.py  database.py  flags.py  logging.py  otel.py  rate_limit.py  rbac.py  redis.py
backend/app/demo/: seed.py
backend/app/demo/k6/: script.js
backend/app/demo/sample_repos/python_small/: hello.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 0001_create_tables.py
backend/app/models/: __init__.py  agent_response.py  agent_run.py  api_key.py  audit_log.py  base.py  code_review.py  finding.py  project.py  repo.py  repository.py  review.py  tenant.py  user.py
backend/app/schemas/: common.py  finding.py  review.py
backend/app/scripts/: analytics_export.py
backend/app/services/: diff_fetcher.py  github_service.py  orchestrator.py  review_service.py  review_service_impl.py  webhook_service.py  websocket_manager.py
backend/app/services/agents/: architecture_agent.py  base.py  logic_agent.py  performance_agent.py  security_agent.py  style_agent.py
backend/app/websocket/: handlers.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_agents.py  test_agents_rules.py  test_api_reviews.py  test_orchestrator.py  test_rate_limit.py  test_webhook_flow.py
config/: agents.yaml
docs/: ANALYTICS.md  API.md  ARCHITECTURE.md  DATA_RETENTION.md  DEPLOYMENT.md  DEVELOPMENT.md  OBSERVABILITY.md  ONBOARDING.md  PRIVACY.md  PRODUCT_THINKING.md  RUNBOOKS.md  SLOs.md  agents.md  api.md  deployment.md  product-thinking.md  quick-reference.md
frontend/: .eslintrc.json  Dockerfile  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  index.css  index.tsx  main.tsx
frontend/src/components/: ReviewDetail.tsx
frontend/src/components/Layout/: Layout.tsx
frontend/src/components/Reviews/: ReviewDetail.tsx  ReviewList.tsx
frontend/src/lib/: api.ts  auth.ts  flags.ts
frontend/src/pages/: AgentStatus.tsx  Dashboard.tsx  RepositoryList.tsx  ReviewDetail.tsx  ReviewDetailPage.tsx  ReviewList.tsx  Reviews.tsx  Settings.tsx
frontend/src/services/: api.ts
frontend/src/tests/: ReviewList.test.tsx
grafana/: dashboard.json
k8s/helm/ai-code-review-squad/: Chart.yaml  values.yaml
k8s/helm/ai-code-review-squad/templates/: _helpers.tpl  deployment-backend.yaml  deployment-frontend.yaml  deployment-workers.yaml  hpa.yaml  ingress.yaml  keda.yaml  secret.yaml  service-backend.yaml  service-frontend.yaml
k8s/overlays/dev/: values.yaml
k8s/overlays/prod/: values.yaml
sbom/: backend.cdx.json  frontend.cdx.json
scripts/: init-db.sql  setup-dev.sh
